kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: getactions-app
  namespace: getactions
spec:
  selector:
    app: getactions-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
